about us commit

--- a/index.html
+++ b/index.html
@@ -610,7 +610,36 @@
         </div>
         <button id="bt1">Useless button</button>
       </div>
-      
+      <div class="about-us">
+        <header class="header">
+            <h1>About Us</h1>
+        </header>
+        
+        <div class="content">
+            <div class="member">
+                <img src="https://via.placeholder.com/150" alt="Dev Taneja">
+                <h2>Dev Taneja</h2>
+                <a href="http://linkedin.com/in/dev-taneja-57625327b" target="_blank">LinkedIn Profile</a>
+            </div>
+
+            <div class="member">
+                <img src="https://via.placeholder.com/150" alt="Mahi Shah">
+                <h2>Mahi Shah</h2>
+                <a href="http://linkedin.com/in/mahi-shah-417975212" target="_blank">LinkedIn Profile</a>
+            </div>
+        </div>
+
+        <div class="teacher-section">
+            <img src="https://via.placeholder.com/150" alt="Dr. J B Jagdale">
+            <h2>Dr. J B Jagdale</h2>
+            <a href="http://linkedin.com/in/dr-jayashree-balaso-j-19ba9716" target="_blank">LinkedIn Profile</a>
+        </div>
+
+        <footer class="footer">
+            <p>&copy; 2025 Our Team. All Rights Reserved.</p>
+        </footer>
+    </div>
+
       <script src="script.js"></script>
   </body>
 </html>
