--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <div class="container">
       <hr class="line-1" />
       <hr class="line-2" />
-      <h1>THE TIMES OF PICT</h1>
+      <h1>SCTR’s PUNE INSTITUE of COMPUTER TECHNOLOGY</h1>
+      <h3>Department of Information Technology</h3>
       <hr class="line-2" />
       <hr class="line-1" />
       <!-- <div class="page-1">
