Fixed the main headline and gallery

--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
     <div class="container">
       <hr class="line-1" />
       <hr class="line-2" />
-      <h1>SCTR's Pune Institute of Computer Technology</h1>
+      
+      <div class="Heading">
+        <h3 id="SCTR">SCTR's</h3>
+      <h1>Pune Institute of Computer Technology</h1>
       <h2>Department of Information Technology (2024 - Issue 2)</h2>
+    </div>
       <hr class="line-2" />
       <hr class="line-1" />
       <!-- <div class="page-1">
@@ -48,16 +52,22 @@
           <img src="college.jpg" alt="Large Image" />
         </div>
         <div class="text-container">
-          <div class="College">
+          <div class="Vision">
             <h2>Institue Vision</h2>
             <p>
-              SCTR’s Pune Institute of Computer Technology envisions to be a
+              SCTR's Pune Institute of Computer Technology envisions to be a
               centre of excellence in higher technical education and research,
               producing global leaders in the field of technology.
             </p>
           </div>
-
-          <div class="College">
+          <div class="Vision">
+            <h2>Department Vision</h2>
+            <p>
+              The department endeavors to be recognized globally as a centre of
+              academic excellence and research in Information Technology.
+            </p>
+          </div>
+          <div class="Mission">
             <h2>Institue Mission</h2>
             <p>
               Provide rigorous academic training that equips students to excel
@@ -70,16 +80,7 @@
               communication skills.
             </p>
           </div>
-
-          <div class="Dept">
-            <h2>Department Vision</h2>
-            <p>
-              The department endeavors to be recognized globally as a centre of
-              academic excellence and research in Information Technology.
-            </p>
-          </div>
-
-          <div class="Dept">
+          <div class="Mission">
             <h2>Department Mission</h2>
             <p>
               To inculcate research culture among students by imparting
@@ -531,20 +532,20 @@
           </figure>
           <div class="gallery-text">
             <h2>
-              Department <span id="ITdept">of</span> Information Technology
+              <span id="Dept_of" >Department of</span> <span id="ITdept">Information</span> Technology 
             </h2>
           </div>
           <figure class="gallery-item">
-            <img src="img/picture6.jpg" />
+            <img src="img/picture17.jpg" />
           </figure>
           <figure class="gallery-item">
             <img src="img/picture7.jpg" />
           </figure>
           <figure class="gallery-item">
-            <img src="img/picture8.jpg" />
+            <img src="img/picture16.jpg" />
           </figure>
           <figure class="gallery-item">
-            <img src="img/picture9.jpg" />
+            <img src="img/Picture5.png" />
           </figure>
         </div>
 
