--- a/index.html
+++ b/index.html
@@ -197,74 +197,30 @@
             },
           });
         </script>
-        <div class="table-container">
-          <table>
-            <thead>
-              <tr>
-                <th>Company</th>
-                <th>No. of Students</th>
-                <th>Package in Lacs</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Adobe</td>
-                <td>1</td>
-                <td>47</td>
-              </tr>
-              <tr>
-                <td>PhonePe</td>
-                <td>2</td>
-                <td>33</td>
-              </tr>
-              <tr>
-                <td>BNY Mellon</td>
-                <td>2</td>
-                <td>21.64</td>
-              </tr>
-              <tr>
-                <td>Druva</td>
-                <td>2</td>
-                <td>20.1</td>
-              </tr>
-              <tr>
-                <td>Schlumberger</td>
-                <td>2</td>
-                <td>19.73</td>
-              </tr>
-              <tr>
-                <td>Deutsche Bank</td>
-                <td>3</td>
-                <td>19.63</td>
-              </tr>
-              <tr>
-                <td>BMC</td>
-                <td>4</td>
-                <td>14</td>
-              </tr>
-              <tr>
-                <td>ION</td>
-                <td>4</td>
-                <td>14</td>
-              </tr>
-              <tr>
-                <td>Tracelink</td>
-                <td>1</td>
-                <td>13.9</td>
-              </tr>
-              <tr>
-                <td>eQ Technologic</td>
-                <td>3</td>
-                <td>13.88</td>
-              </tr>
-              <tr>
-                <td>Barclays</td>
-                <td>19</td>
-                <td>13.7</td>
-              </tr>
-            </tbody>
+         <div class="table-container">
+          <table id="placements-table">
+              <thead>
+                  <tr>
+                      <th>Company</th>
+                      <th>Package (LPA)</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <tr><td>PhonePe</td><td>33.54</td></tr>
+                  <tr><td>Arista</td><td>29.44</td></tr>
+                  <tr><td>BNY Mellon</td><td>21.64</td></tr>
+                  <tr><td>ION</td><td>17.3</td></tr>
+                  <tr><td>Ittiam Systems Pvt Ltd</td><td>16</td></tr>
+                  <tr><td>BMC</td><td>14</td></tr>
+                  <tr><td>ZS Associates</td><td>13.65</td></tr>
+                  <tr><td>MasterCard</td><td>13.6</td></tr>
+                  <tr><td>Barclays</td><td>13</td></tr>
+                  <tr><td>ACI Worldwide</td><td>12.3</td></tr>
+                  <tr><td>HSBC</td><td>9</td></tr>
+                  <tr><td>Merilytics</td><td>8.5</td></tr>
+              </tbody>
           </table>
-        </div>
+      </div>
 
         <div class="placement-section">
           <div class="placement-year">
