--- a/index.html
+++ b/index.html
@@ -164,6 +164,11 @@
               ],
             },
             options: {
+                  animation: 
+                  {
+          duration: 2000, // Animation duration in milliseconds
+          easing: 'easeInOutQuad' // Easing function
+        },
               responsive: true,
               plugins: {
                 legend: {
