--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <hr class="line-1" />
       <hr class="line-2" />
       
-      <div class="Heading">
+      <div class="heading">
         <h3 id="SCTR">SCTR's</h3>
       <h1>Pune Institute of Computer Technology</h1>
       <h2>Department of Information Technology (2024 - Issue 2)</h2>
