--- a/index.html
+++ b/index.html
@@ -139,7 +139,14 @@
             </div>
           </div>
         </div>
-      
+      <div class="index">
+        <h2> INDEX</h2>
+        <ul>
+          <li href="branch-toppers">
+            Branch Toppers
+          </li>
+        </ul>
+      </div>
         <!-- TE-IT Branch Toppers -->
         <div class="branch-toppers">
           <h3 class="branch-title">TE-IT Branch Toppers</h3>
