--- a/index.html
+++ b/index.html
@@ -93,33 +93,40 @@
       </div>
       <div class="index">
         <h2> INDEX</h2>
-        <ul>
-          <li >
+        <div class="Grid">
+          <div class="Box">
+            <a href="#HOD">Words from our HOD</a>
+          </div>
+          <div class="Box">
             <a href="#college-toppers">Branch Toppers</a>
-          </li>
-          <li >
+          </div>
+          <div class="Box">
             <a href="#placements">Placements Overview</a>
-          </li>
-          <li >
+          </div>
+          <div class="Box">
             <a href="#internships">Internships Overview</a>
-          </li>
-          <li >
-            <a href="#calender">Activities Conducted</a>
-          </li>
-          <li >
+          </div>
+          <div class="Box">
+            <a href="#calendar">Activities Conducted</a>
+          </div>
+          <div class="Box">
             <a href="#Gallery">Gallery</a>
-          </li>
-          <li >
-            <a href="#Report">Reports of the events conudcted</a>
-          </li>
-          <li >
+          </div>
+          <div class="Box">
+            <a href="#Report">Reports of the events conducted</a>
+          </div>
+          <div class="Box">
             <a href="#Articles">Student Articles</a>
-          </li>
-          <li >
+          </div>
+          <div class="Box">
             <a href="#About-Us">About Us</a>
-          </li>
-        </ul>
+          </div>
+        </div>
+        
       </div>
+      <section id="HOD">
+
+      </section>
       <section id="college-toppers" class="toppers-section">
         <h2 class="section-title">Congratulations to Our Toppers!</h2>
         <p class="congrats-message">
@@ -1106,7 +1113,7 @@
       </div>
     </section>
     <section id="Articles">
-      
+
     </section>
       <button id="bt1">Useless button</button>
     </div>
