--- a/index.html
+++ b/index.html
@@ -94,35 +94,36 @@
       <div class="index">
         <h2> INDEX</h2>
         <div class="Grid">
-          <div class="Box">
-            <a href="#HOD">Words from our HOD</a>
+          <div class="Grid">
+            <div class="student-box">
+              <a href="#HOD">Words from our HOD</a>
+            </div>
+            <div class="student-box">
+              <a href="#college-toppers">Branch Toppers</a>
+            </div>
+            <div class="student-box">
+              <a href="#placements">Placements Overview</a>
+            </div>
+            <div class="student-box">
+              <a href="#internships">Internships Overview</a>
+            </div>
+            <div class="student-box">
+              <a href="#calendar">Activities Conducted</a>
+            </div>
+            <div class="student-box">
+              <a href="#Gallery">Gallery</a>
+            </div>
+            <div class="student-box">
+              <a href="#Report">Reports of the events conducted</a>
+            </div>
+            <div class="student-box">
+              <a href="#Articles">Student Articles</a>
+            </div>
+            <div class="student-box">
+              <a href="#About-Us">About Us</a>
+            </div>
           </div>
-          <div class="Box">
-            <a href="#college-toppers">Branch Toppers</a>
-          </div>
-          <div class="Box">
-            <a href="#placements">Placements Overview</a>
-          </div>
-          <div class="Box">
-            <a href="#internships">Internships Overview</a>
-          </div>
-          <div class="Box">
-            <a href="#calendar">Activities Conducted</a>
-          </div>
-          <div class="Box">
-            <a href="#Gallery">Gallery</a>
-          </div>
-          <div class="Box">
-            <a href="#Report">Reports of the events conducted</a>
-          </div>
-          <div class="Box">
-            <a href="#Articles">Student Articles</a>
-          </div>
-          <div class="Box">
-            <a href="#About-Us">About Us</a>
-          </div>
-        </div>
-        
+          
       </div>
       <section id="HOD">
 
