--- a/index.html
+++ b/index.html
@@ -1600,6 +1600,13 @@
             >LinkedIn Profile</a
           >
         </div>
+        <div class="member">
+          <img src="https://via.placeholder.com/150" alt="Dev Taneja" />
+          <h2>Rajwardhan</h2>
+          <a href="http://linkedin.com/in/dev-taneja-57625327b" target="_blank"
+            >LinkedIn Profile</a
+          >
+        </div>
 
         <div class="member">
           <img src="https://via.placeholder.com/150" alt="Mahi Shah" />
