--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         
               <!-- HoD Profile Image -->
               <div class="profile-image">
-                <img src="hod-placeholder.jpg" alt="Dr. Archana Ghotkar">
+                <img src="img\HODIT.jpg" alt="Dr. Archana Ghotkar">
               </div>
             </div>
           
@@ -281,7 +281,7 @@
             </div>
             <div class="topper-box">
               <div class="topper-photo">
-                <img src="https://via.placeholder.com/100" alt="Student 2">
+                <img src="img\Atharva Banasure.jpg" alt="Student 2">
               </div>
               <h4 class="topper-name">Banasure Athrava Rambhau</h4>
               <p class="topper-marks">9.93</p>
@@ -295,7 +295,7 @@
             </div>
             <div class="topper-box">
               <div class="topper-photo">
-                <img src="https://via.placeholder.com/100" alt="Student 4">
+                <img src="img\Shantanu Jadhav.jpg" alt="Student 4">
               </div>
               <h4 class="topper-name">Jadhav Shantanu Ankush</h4>
               <p class="topper-marks">9.86</p>
@@ -316,7 +316,7 @@
           <div class="toppers-row">
             <div class="topper-box">
               <div class="topper-photo">
-                <img src="https://via.placeholder.com/100" alt="Student 6">
+                <img src="img\Ankita_Adam.jpg" alt="Student 6">
               </div>
               <h4 class="topper-name">Adam Ankita Ramesh</h4>
               <p class="topper-marks">10</p>
@@ -330,7 +330,7 @@
             </div>
             <div class="topper-box">
               <div class="topper-photo">
-                <img src="https://via.placeholder.com/100" alt="Student 8">
+                <img src="img\Sahil Katkamwar.jpeg" alt="Student 8">
               </div>
               <h4 class="topper-name">Katkamwar Sahil Sanjay</h4>
               <p class="topper-marks">9.91</p>
@@ -344,7 +344,7 @@
             </div>
             <div class="topper-box">
               <div class="topper-photo">
-                <img src="https://via.placeholder.com/100" alt="Student 10">
+                <img src="img\Sejal Patil.jpeg" alt="Student 10">
               </div>
               <h4 class="topper-name">Patil Sejal Kailas</h4>
               <p class="topper-marks">9.75</p>
@@ -504,10 +504,10 @@
           <!-- Student 1 -->
           <div class="student-box">
             <div class="student-photo">
-              <img src="https://via.placeholder.com/100" alt="Atharv Dingre">
+              <img src="img\Atharva Dingare.JPG" alt="Atharv Dingre">
             </div>
             <div class="student-details">
-              <p class="student-name">Atharv Dingre</p>
+              <p class="student-name">Atharva Dingare</p>
             </div>
           </div>
           <!-- Student 2 -->
@@ -531,7 +531,7 @@
           <!-- Upper Row -->
           <div class="student-box">
             <div class="student-photo">
-              <img src="https://via.placeholder.com/100" alt="Om Nikam">
+              <img src="img\OM NIKAM.jpeg" alt="Om Nikam">
             </div>
             <div class="student-details">
               <p class="student-name">Om Nikam</p>
@@ -539,7 +539,7 @@
           </div>
           <div class="student-box">
             <div class="student-photo">
-              <img src="https://via.placeholder.com/100" alt="Vishal Patil">
+              <img src="img\Vishal Patil.jpg" alt="Vishal Patil">
             </div>
             <div class="student-details">
               <p class="student-name">Vishal Patil</p>
