--- a/index.html
+++ b/index.html
@@ -241,35 +241,35 @@
           <div class="toppers-row">
             <div class="topper-box">
               <div class="topper-photo">
-                <img src="https://via.placeholder.com/100" alt="Patil Kartik Tushar">
+                <img src="img\kartik_patil.jpg" alt="Patil Kartik Tushar">
               </div>
               <h4 class="topper-name">Patil Kartik Tushar</h4>
               <p class="topper-marks">9.74</p>
             </div>
             <div class="topper-box">
               <div class="topper-photo">
-                <img src="https://via.placeholder.com/100" alt="Jain Samyak Vijay">
+                <img src="img\ssamyak_jain.jpg" alt="Jain Samyak Vijay">
               </div>
               <h4 class="topper-name">Jain Samyak Vijay</h4>
               <p class="topper-marks">9.71</p>
             </div>
             <div class="topper-box">
               <div class="topper-photo">
-                <img src="https://via.placeholder.com/100" alt="Bedmutha Devesh Sandeep">
+                <img src="img\devesh_bedmutha.jpg" alt="Bedmutha Devesh Sandeep">
               </div>
               <h4 class="topper-name">Bedmutha Devesh Sandeep</h4>
               <p class="topper-marks">9.66</p>
             </div>
             <div class="topper-box">
               <div class="topper-photo">
-                <img src="https://via.placeholder.com/100" alt="Mulla Mahek Najir">
+                <img src="img\mahek_mulla.jpg" alt="Mulla Mahek Najir">
               </div>
               <h4 class="topper-name">Mulla Mahek Najir</h4>
               <p class="topper-marks">9.66</p>
             </div>
             <div class="topper-box">
               <div class="topper-photo">
-                <img src="https://via.placeholder.com/100" alt="Shetti Shreya Shridhar">
+                <img src="img\shreya_shetti.jpg" alt="Shetti Shreya Shridhar">
               </div>
               <h4 class="topper-name">Shetti Shreya Shridhar</h4>
               <p class="topper-marks">9.6</p>
@@ -297,7 +297,7 @@
             </div>
             <div class="topper-box">
               <div class="topper-photo">
-                <img src="https://via.placeholder.com/100" alt="Student 3">
+                <img src="img\Tanmay_Kokate.jpg" alt="Student 3">
               </div>
               <h4 class="topper-name">Kokate Tanmay Baban</h4>
               <p class="topper-marks">9.93</p>
@@ -311,7 +311,7 @@
             </div>
             <div class="topper-box">
               <div class="topper-photo">
-                <img src="https://via.placeholder.com/100" alt="Student 5">
+                <img src="img\diya_oswal.jpg" alt="Student 5">
               </div>
               <h4 class="topper-name">Oswal Diya Prakash</h4>
               <p class="topper-marks">9.86</p>
@@ -346,7 +346,7 @@
             </div>
             <div class="topper-box">
               <div class="topper-photo">
-                <img src="https://via.placeholder.com/100" alt="Student 9">
+                <img src="img\mahi_shahteit.jpg" alt="Student 9">
               </div>
               <h4 class="topper-name">Shah Mahi Mukesh</h4>
               <p class="topper-marks">9.86</p>
@@ -520,7 +520,7 @@
           <!-- Student 2 -->
           <div class="student-box">
             <div class="student-photo">
-              <img src="https://via.placeholder.com/100" alt="Aniket Hend">
+              <img src="img\Aniket_Hend.jpg" alt="Aniket Hend">
             </div>
             <div class="student-details">
               <p class="student-name">Aniket Hend</p>
@@ -558,7 +558,7 @@
           <!-- Lower Row -->
           <div class="student-box">
             <div class="student-photo">
-              <img src="https://via.placeholder.com/100" alt="Ankur Musmade">
+              <img src="img\ankur_musmade.jpg" alt="Ankur Musmade">
             </div>
             <div class="student-details">
               <p class="student-name">Ankur Musmade</p>
