--- a/index.html
+++ b/index.html
@@ -96,7 +96,12 @@
             </p>
           </div>
         </div>
+
       </div>
+      <div class="faculty-container">
+        <img src="img/itfaculty.jpg" alt="Large Faculty Image" />
+      </div>
+      
       <div >
         <h2 id="indexx"> INDEX</h2>
         <div class="Grid">
@@ -289,7 +294,7 @@
           <div class="toppers-row">
             <div class="topper-box">
               <div class="topper-photo">
-                <img src="https://via.placeholder.com/100" alt="Student 1">
+                <img src="img\Sarvadnya.jpg" alt="Student 1">
               </div>
               <h4 class="topper-name">Barate Sarvadnyaa Jitendra</h4>
               <p class="topper-marks">10</p>
@@ -338,7 +343,7 @@
             </div>
             <div class="topper-box">
               <div class="topper-photo">
-                <img src="https://via.placeholder.com/100" alt="Student 7">
+                <img src="img\sayali_lagad.jpg" alt="Student 7">
               </div>
               <h4 class="topper-name">Lagad Sayali Sunil</h4>
               <p class="topper-marks">9.98</p>
@@ -573,7 +578,7 @@
           </div>
           <div class="student-box">
             <div class="student-photo">
-              <img src="https://via.placeholder.com/100" alt="Raj Nirankari">
+              <img src="img\raj_nirankari.jpg" alt="Raj Nirankari">
             </div>
             <div class="student-details">
               <p class="student-name">Raj Nirankari</p>
