--- a/index.html
+++ b/index.html
@@ -1588,7 +1588,7 @@
         
 
         <div class="member">
-          <img src="img\mahinewsletter.jpg" alt="Mahi Shah" />
+          <img src="img\mahinewsletterfinal.jpg" alt="Mahi Shah" />
           <h2>Mahi Shah</h2>
           <a href="http://linkedin.com/in/mahi-shah-417975212" target="_blank"
             >LinkedIn Profile</a
