--- a/index.html
+++ b/index.html
@@ -236,16 +236,16 @@
         <!-- Newsletter In-charge Message -->
         <div class="message-box">
             <p>
-                The newsletter serves as a bridge, connecting students, faculty, and industry experts. We aim to showcase the incredible achievements of our department, highlight groundbreaking projects, and keep everyone informed about the latest advancements in technology.
+              Dear readers, </p>
+              <p>I feel happy to present to you Issue I of the newsletter for AY 24-25. The newsletter is the image of the department where one can see the efforts put in by the students and staff of the department. </p>
+             <p> Dear GenZ,</p>
+              <p>Firstly, congratulations for your dedication, resilience, creativity and ability to easily adopt technology. The luxury of advanced technology in handheld devices comes with many challenges faced by the world now and in coming years, like lowered physical, mental and psychological strength are few of many. Ambition to achieve goals, if coupled with humility and patience can be a cherry on top. Your teachers will always be happy to see you flourish. All the best for your future and endeavors!!
             </p>
-            <p>
-                As the Newsletter In-charge, I am excited to bring you insights, innovations, and inspiring stories from our IT Department. Let’s continue this journey of learning, exploration, and collaboration together.
-            </p>
-            <p><strong>– Newsletter In-charge</strong></p>
+            <p><strong>– Dr. J. B. Jagdale</strong><br>Newsletter In-Charge</br></p>
 
             <!-- Newsletter In-charge Profile Image -->
             <div class="profile-image">
-                <img src="newsletter-placeholder.jpg" alt="Newsletter In-charge">
+                <img src="img\jbj pict.jpg" alt="Newsletter In-charge">
             </div>
         </div>
 
@@ -1730,8 +1730,8 @@
           
             <h4>Basketball Victory !!!🏀🏀🏀 </h4>
             <p>
-              Riya Pande along with the team won the Basketball tournament  .
-              She also represented SPPU in an event in Gwalior.
+              Riya Pande(SE 10), Tanaya Akkalkote (TE 10), Mega Nadar (BE 11), Kanak Agarwal (TE 9) and Riya Pendse along with the team won the Basketball tournament.
+              Riya Pande also represented SPPU in an event in Gwalior.
             </p>
           
         </div>
@@ -1780,7 +1780,7 @@
       </div>
 
       <div class="teacher-section">
-        <img src="https://via.placeholder.com/150" alt="Dr. J B Jagdale" />
+        <img src="img\jbj pict.jpg" alt="Dr. J B Jagdale" />
         <h2>Dr. J B Jagdale</h2>
         <a
           href="http://linkedin.com/in/dr-jayashree-balaso-j-19ba9716"
