--- a/index.html
+++ b/index.html
@@ -252,6 +252,22 @@
           </div>
         </div>
         </section>   
+        <section class="clubs-section">
+          <div class="club-row">
+            <div class="club-label">GOALS & STRENGTH</div>
+            <img src="img/GoalsandStrengths-removebg.png" alt="Goals and Strength">
+          </div>
+        
+          <div class="club-row">
+            <div class="club-label">TECHNICAL CLUBS</div>
+            <img src="img/TechCLubsss-removebg.png" alt="Technical Clubs">
+          </div>
+        
+          <div class="club-row">
+            <div class="club-label">NON-TECHNICAL CLUBS</div>
+            <img src="img/clubs111-removebg.png" alt="Non-Technical Clubs">
+          </div>
+
       <!-- </div> -->
       </section>
       <section id="college-toppers" class="toppers-section">
