--- a/index.html
+++ b/index.html
@@ -293,8 +293,9 @@
             
               <h4>Basketball Victory !!!🏀🏀🏀 </h4>
               <p>
-                Riya Pande along with the team won the Basketball tournament  .
-                She also represented SPPU in an event in Gwalior.
+                Riya Pande (SE 10), Tanaya Akkalkote (TE 10), Mega Nadar (BE 11), Kanak Agarwal (TE 9) and Riya Pendse
+                along with the team won the Basketball tournament  .
+                Riya Pande also represented SPPU in an event in Gwalior.
               </p>
             
           </div>
