--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
           </div>
         </div>
       </section>
-      <section id="calender">
+      <section id="calendar">
       <div class="page-2 newspaper-theme">
         <h2 class="section-title">
           Activities Conducted from 1st July 2024 to 30th September 2024
